--- a/sesion-08/index.html
+++ b/sesion-08/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="css/linearicons.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&family=Zilla+Slab:wght@700&display=swap" rel="stylesheet">
     <!-- Normalize CSS -->
@@ -19,7 +20,17 @@
 </head>
 
 <body>
-    <header></header>
+    <header class="main-home-header">
+        <div class="container">
+            <div class="home-header">
+                <figure>
+                    <img src="img/Devmaster.png" alt="texto alternativo">
+                </figure>
+                <span class="icon-menu"></span>
+            </div>
+
+        </div>
+    </header>
     <main>
         <section class="main-h-hero-banner">
             <div class="container">
@@ -95,42 +106,77 @@
                 </div>
             </div>
         </section>
-        <div>
-            <div>
-                <span>+2</span>
-                <p>Years of Experience</p>
-            </div>
-            <div>
-                <span>15+</span>
-                <p>Happy Customers</p>
-            </div>
-            <div>
-                <span>8000+</span>
-                <p>Lines of Code</p>
+        <div class="main-home-details">
+            <div class="container">
+                <div class="home-details">
+                    <div class="card-3">
+                        <span class="icon-papers"></span>
+                        <div class="card-3__details">
+                            <span>+2</span>
+                            <p>Years of Experience</p>
+                        </div>
+                    </div>
+                    <div class="card-3">
+                        <span class="icon-medal-empty"></span>
+                        <div class="card-3__details">
+                            <span>15+</span>
+                            <p>Happy Customers</p>
+                        </div>
+                    </div>
+                    <div class="card-3">
+                        <span class="icon-code"></span>
+                        <div class="card-3__details">
+                            <span>8000+</span>
+                            <p>Lines of Code</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <section>
-            <div class="title">
-                <span>deserunt</span>
-                <h2>Recommendations</h2>
-            </div>
-            <div>
-                <p>Is awesome and I can’t image working on my projects without it. It has saved me countless hours of time and has increased.</p>
-                <img src="" alt="">
-                <h3>Patrick Harry</h3>
-                <span>Web Developer</span>
-            </div>
-            <div>
-                <p>Is awesome and I can’t image working on my projects without it. It has saved me countless hours of time and has increased.</p>
-                <img src="" alt="">
-                <h3>Andrew Riley</h3>
-                <span>Web Developer</span>
-            </div>
-            <div>
-                <p>Is awesome and I can’t image working on my projects without it. It has saved me countless hours of time and has increased.</p>
-                <img src="" alt="">
-                <h3>Ralph Jordan</h3>
-                <span>Web Developer</span>
+        <section class="main-home-recomendations">
+            <div class="container">
+                <div class="title">
+                    <span>deserunt</span>
+                    <h2>Recommendations</h2>
+                </div>
+                <div class="home-recomendations">
+                    <div class="card-2">
+                        <p>Is awesome and I can’t image working on my projects without it. It has saved me countless hours of time and has increased.</p>
+                        <div>
+                            <figure>
+                                <img src="img/user.png" alt="texto alternativo">
+                            </figure>
+                            <div>
+                                <h3>Patrick Harry</h3>
+                                <span>Web Developer</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-2">
+                        <p>Is awesome and I can’t image working on my projects without it. It has saved me countless hours of time and has increased.</p>
+                        <div>
+                            <figure>
+                                <img src="img/user.png" alt="texto alternativo">
+                            </figure>
+                            <div>
+                                <h3>Andrew Riley</h3>
+                                <span>Web Developer</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-2">
+                        <p>Is awesome and I can’t image working on my projects without it. It has saved me countless hours of time and has increased.</p>
+                        <div>
+                            <figure>
+                                <img src="img/user.png" alt="texto alternativo">
+                            </figure>
+                            <div>
+                                <h3>Ralph Jordan</h3>
+                                <span>Web Developer</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="main-h-form">
@@ -178,14 +224,11 @@
                         </li>
                     </ul>
                 </nav>
-                <p><small>2020 ©Devmaster Perú. All rights reserved. Design - <a href="">GManriqe</a></small></p>
+                <p><small>2020 ©Devmaster Perú. All rights reserved. <br> Design - <a href="pdf/dumy.pdf" target="_blank">GManriqe</a></small></p>
             </div>
         </div>
     </footer>
-    <p>
-        <span>hola</span><span>devmaster</span>
 
-    </p>
 </body>
 
 </html>
