--- a/ejercicio-card/index.html
+++ b/ejercicio-card/index.html
@@ -8,12 +8,13 @@
     <!--Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <!-- Google Fonts -->
-    <link rel="stylesheet" href="link rel=" preconnect href="https://fonts.gstatic.com ">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto+Slab:wght@700&display=swap " rel="stylesheet ">
     <!-- Normalize CSS -->
     <link rel="stylesheet" href="css/normalize.css">
     <!-- Style CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/variable.css">
+    <title>Devmaster</title>
     <title>Devmaster</title>
 </head>
 
@@ -24,10 +25,13 @@
             <figure>
                 <img src="img/brownie.png" alt="texto alternativo">
             </figure>
-            <p>receta</p>
-            <h1>Torta de Chocolate con <br> Trozos de Nueces</h1>
-            <p>Por: <span>Mathieu Joao</span></p>
-            <a href="#" class="btn">Ver+</a>
+            <div class="home-p">
+                <p>RECETA</p>
+                <h3>Torta de Chocolate con Trozos de Nueces</h3>
+                <p>Por: <span>Mathieu Joao</span></p>
+                <button href="#" class="btn">Ver+</a>
+            </div>
+            
         </div>
 
     </section>
